<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/getstarted_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="372dp"
        android:layout_height="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="297dp"
            android:layout_height="47dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/trong_tommorow"
            android:textAllCaps="false"
            android:textColor="#0F0867"
            android:textSize="32sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="61dp"
            android:layout_height="94dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/s"
            android:textColor="#0F0867"
            android:textSize="80sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.528" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="185dp"
            android:layout_height="44dp"
            android:layout_marginTop="224dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/ore_today"
            android:textColor="#0F0867"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="311dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/happiness_is_homemade"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/GetStartButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/GetStartButton"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:text="@string/get_started"
            android:textSize="18sp"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.851"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.861"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>